# freediameter

./: .hgtags  app_lte.conf  freeDiameter.conf  test-lte.dump
.hg/: dirstate
.hg/cache/: branch2-base  hgtagsfnodes1  tags2-visible
.hg/store/: 00changelog.d  00changelog.i  00manifest.d  00manifest.i
.hg/store/data/: _c_make_lists.txt.i  _i_n_s_t_a_l_l._fedora.i  _i_n_s_t_a_l_l._free_b_s_d.i  _i_n_s_t_a_l_l._o_s_x.i  _i_n_s_t_a_l_l._open_s_u_s_e.i  _i_n_s_t_a_l_l._ubuntu.i  _i_n_s_t_a_l_l.i  _i_n_s_t_a_l_l.pkgsrc.i  _l_i_c_e_n_s_e.i
.hg/store/data/cmake/_modules/: _find_g_n_u_t_l_s.cmake.i
.hg/store/data/contrib/_open_w_r_t/: _h_o_w_t_o.i
.hg/store/data/contrib/_r_p_m/: free_diameter.spec.i
.hg/store/data/contrib/debian/: control.i
.hg/store/data/contrib/nightly__tests/: allext.conf.i  prereqs.fedora.i
.hg/store/data/extensions/__sample/: _c_make_lists.txt.i
.hg/store/data/extensions/app__diameap/: _c_make_lists.txt.i
.hg/store/data/extensions/dict__dcca__3gpp/: dict__dcca__3gpp.c.i
.hg/store/data/extensions/test__sip/: test__sip.c.i  test__sip.h.i
.hg/store/data/include/free_diameter/: _c_make_lists.txt.i
.hg/store/data/libfdcore/: _c_make_lists.txt.i  p__ce.c.i
.hg/store/data/libfdproto/: _c_make_lists.txt.i  messages.c.i  ostr.c.i
doc/: app_lte.conf.sample
extensions/: CMakeLists.txt
extensions/app_lte/: CMakeLists.txt  app_lte.c  app_lte.h  app_lte_common.h  app_lte_conf.l  app_lte_conf.y  app_lte_defs.h  app_lte_mysql.c  app_lte_mysql.h  app_lte_server.c  app_lte_server.h  app_lte_store.sql  app_lte_subscriber.c  app_lte_subscriber.h  lib_app_lte.h  lte_common.h  ta_bench.c  ta_conf.l  ta_conf.y  ta_dict.c  ta_serv.c  test_request.txt
obj-x86_64-linux-gnu/: CMakeCache.txt
obj-x86_64-linux-gnu/include/freeDiameter/: freeDiameter-host.h
python-diameter-client/: diameter_base.py  diameter_client.py  diameter_responses.py  diameter_server.py  libDiameter.py  sample_client.py  sample_server.py  sim_diameter_client.py
python-soap-client/: sample_client.py
